// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-piv-cac-verification renders form with custom PIV/CAC Button label and class 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        tabindex="-1"
                      >
                        Sign In
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-14"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-15"
                      >
                        <img
                          alt="PIV Card"
                          aria-hidden="true"
                          class="MuiBox-root emotion-1"
                          src="MockSVGIcon"
                        />
                      </span>
                      My custom PIV Button Label
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-18"
                      role="separator"
                    >
                      <span
                        class="MuiDivider-wrapper emotion-19"
                      >
                        OR
                      </span>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                      dir="ltr"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-22"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-23"
                          data-shrink="false"
                          for="identifier"
                          id="identifier-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-24"
                          data-se="identifier"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="identifier-label"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-25"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-28"
                        data-shrink="false"
                        for="credentials.passcode"
                      >
                        Password
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-29"
                        dir="ltr"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-25"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-31"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-33"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-35"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-36"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-37"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-38"
                            data-indeterminate="false"
                            data-se="rememberMe"
                            data-se-for-name="rememberMe"
                            id="rememberMe"
                            name="rememberMe"
                            type="checkbox"
                          />
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-39"
                        >
                          Keep me signed in
                        </span>
                      </label>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-41"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="forgot-password"
                      href=""
                    >
                      Forgot password?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="unlock"
                      href=""
                    >
                      Unlock account?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                    >
                      Help
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                          data-se="signup-info"
                          id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                        data-se="enroll"
                        href=""
                      >
                        Sign up
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as PRIMARY/default 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        tabindex="-1"
                      >
                        Sign In
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-14"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-15"
                      >
                        <img
                          alt="PIV Card"
                          aria-hidden="true"
                          class="MuiBox-root emotion-1"
                          src="MockSVGIcon"
                        />
                      </span>
                      Sign in with PIV / CAC card
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-18"
                      role="separator"
                    >
                      <span
                        class="MuiDivider-wrapper emotion-19"
                      >
                        OR
                      </span>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                      dir="ltr"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-22"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-23"
                          data-shrink="false"
                          for="identifier"
                          id="identifier-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-24"
                          data-se="identifier"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="identifier-label"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-25"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-28"
                        data-shrink="false"
                        for="credentials.passcode"
                      >
                        Password
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-29"
                        dir="ltr"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-25"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-31"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-33"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-35"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-36"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-37"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-38"
                            data-indeterminate="false"
                            data-se="rememberMe"
                            data-se-for-name="rememberMe"
                            id="rememberMe"
                            name="rememberMe"
                            type="checkbox"
                          />
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-39"
                        >
                          Keep me signed in
                        </span>
                      </label>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-41"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="forgot-password"
                      href=""
                    >
                      Forgot password?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="unlock"
                      href=""
                    >
                      Unlock account?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                    >
                      Help
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                          data-se="signup-info"
                          id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                        data-se="enroll"
                        href=""
                      >
                        Sign up
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as SECONDARY 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                        tabindex="-1"
                      >
                        Sign In
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                      dir="ltr"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-15"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-16"
                          data-shrink="false"
                          for="identifier"
                          id="identifier-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-17"
                          data-se="identifier"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="identifier-label"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-18"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                        data-shrink="false"
                        for="credentials.passcode"
                      >
                        Password
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                        dir="ltr"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-18"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-24"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-25"
                            data-mui-internal-clone-element="true"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-26"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-28"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-30"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-31"
                            data-indeterminate="false"
                            data-se="rememberMe"
                            data-se-for-name="rememberMe"
                            id="rememberMe"
                            name="rememberMe"
                            type="checkbox"
                          />
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-32"
                        >
                          Keep me signed in
                        </span>
                      </label>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-34"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-36"
                      role="separator"
                    >
                      <span
                        class="MuiDivider-wrapper emotion-37"
                      >
                        OR
                      </span>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-39"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-40"
                      >
                        <img
                          alt="PIV Card"
                          aria-hidden="true"
                          class="MuiBox-root emotion-1"
                          src="MockSVGIcon"
                        />
                      </span>
                      Sign in with PIV / CAC card
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="forgot-password"
                      href=""
                    >
                      Forgot password?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="unlock"
                      href=""
                    >
                      Unlock account?
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                    >
                      Help
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                          data-se="signup-info"
                          id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-43"
                        data-se="enroll"
                        href=""
                      >
                        Sign up
                      </a>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification should render PIV/CAC view when clicking PIV button 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
              <div
                aria-hidden="true"
                class="smart-card-icon MuiBox-root emotion-7"
                data-se="factor-beacon"
              >
                <svg
                  aria-labelledby="smart-card-icon"
                  fill="none"
                  height="2.85714286rem"
                  role="img"
                  viewBox="0 0 48 48"
                  width="2.85714286rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="smart-card-icon"
                  >
                    PIV Card
                  </title>
                  <path
                    class="siwFillPrimaryDark"
                    clip-rule="evenodd"
                    d="M17.5 37h13a2.6 2.6 0 0 0 2.5-2.682V14.682A2.6 2.6 0 0 0 30.5 12h-13a2.6 2.6 0 0 0-2.5 2.682v19.636A2.6 2.6 0 0 0 17.5 37Zm-1.096-23.468A1.6 1.6 0 0 1 17.5 13h13a1.6 1.6 0 0 1 1.5 1.682v19.636A1.6 1.6 0 0 1 30.5 36h-13a1.6 1.6 0 0 1-1.5-1.682V14.682a1.6 1.6 0 0 1 .404-1.15ZM23 28h-1v1h1v-1Zm-3 0h1v1h-1v-1Zm0 5v-3h3v1h-2v2h-1Zm2-1h1v1h-1v-1Zm-2-5a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-5a1 1 0 0 0-1-1h-3Z"
                    fill="#00297A"
                    fill-rule="evenodd"
                  />
                  <path
                    class="siwFillSecondary"
                    clip-rule="evenodd"
                    d="M28 17h-4v1h4v-1Zm2 2h-6v1h6v-1Zm-6 2h6v1h-6v-1Z"
                    fill="#A7B5EC"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-8"
            >
              <form
                class="o-form MuiBox-root emotion-9"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-13"
                        data-se="o-form-head"
                        id="piv-idp_Title_PIV_/_CAC_card_aut2h3ffszv3me6O31d7_1"
                        tabindex="-1"
                      >
                        PIV / CAC card
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-16"
                        data-se="o-form-explain"
                        id="piv-idp_Description_Please_insert_your_PIV_/_CAC_card_and_select_the_user_certificate_aut2h3ffszv3me6O31d7_2"
                      >
                        Please insert your PIV / CAC card and select the user certificate.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <span
                          aria-label="Processing..."
                          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-20"
                          data-se="okta-spinner"
                          role="progressbar"
                          style="width: 1.71428571rem; height: 1.71428571rem;"
                        >
                          <svg
                            class="MuiCircularProgress-svg emotion-21"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-22"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="17"
                              stroke-width="10"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <form
        action="http://localhost:3000/sso/idps/MTLS"
        method="get"
        style="display: none;"
      >
        <input
          name="stateTokenExternalId"
          type="hidden"
          value="ZnNzQnZsc0RwK3RuSnVEUTJNYTZIdXc5bzl6UnI4NzBPazloT0lIMy9wd3hSVGlDMDRjRDQ2V2VqeHJuSGcyNQ"
        />
        <input
          type="submit"
        />
      </form>
    </main>
  </div>
</div>
`;
